// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefboxButton shows a cyan button with KO on it 1`] = `
.c0 {
  background-color: cyan;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 4rem;
  padding: 1.5rem 0;
  border: 0.125rem solid;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<button
  className="c0"
  onClick={[Function]}
/>
`;

exports[`RefboxButton shows a magenta button with P on it 1`] = `
.c0 {
  background-color: magenta;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 4rem;
  padding: 1.5rem 0;
  border: 0.125rem solid;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<button
  className="c0"
  onClick={[Function]}
/>
`;
